Fixes for tables on mobile

--- a/sass/02-base/_04-typography.scss
+++ b/sass/02-base/_04-typography.scss
@@ -157,11 +157,13 @@ table {
 		th{
 			padding: .25rem;
 		}
-		+ tbody{
-			&:before{
-				content: '';
-				display: block;
-				padding-top: 1rem;
+		@media (max-width: 480px){
+			+ tbody{
+				&:before{
+					content: '';
+					display: block;
+					padding-top: 1rem;
+				}
 			}
 		}
 	}
