--- a/sass/05-templates/_05-tickets.scss
+++ b/sass/05-templates/_05-tickets.scss
@@ -16,6 +16,7 @@
 		td{
 			/* Behave  like a "row" */
 			position: relative;
+			width: 100%;
 			font-size: 1.25rem;
 			line-height: 120%;
 			text-align: left;
